# Lima-camera-aviex

./: .gitignore  CMakeLists.txt  README.md  pom.xml
doc/: index.rst  nobugs_2006.odp
include/: AviexBinCtrlObj.h  AviexCamera.h  AviexCompatibility.h  AviexDetInfoCtrlObj.h  AviexInterface.h  AviexRoiCtrlObj.h  AviexSyncCtrlObj.h
python/: __init__.py
sdk/linux/include/: mx_amplifier.h  mx_analog_input.h  mx_analog_output.h  mx_area_detector.h  mx_array.h  mx_ascii.h  mx_atomic.h  mx_autoscale.h  mx_bit.h  mx_bluice.h  mx_callback.h  mx_camac.h  mx_camera_link.h  mx_camera_link_api.h  mx_cfn.h  mx_cfn_defaults.h  mx_clock.h  mx_console.h  mx_constants.h  mx_coprocess.h  mx_datafile.h  mx_dead_reckoning.h  mx_digital_input.h  mx_digital_output.h  mx_dirent.h  mx_driver.h  mx_dynamic_library.h  mx_encoder.h  mx_epics.h  mx_export.h  mx_generic.h  mx_gpib.h  mx_handle.h  mx_hash_table.h  mx_hrt.h  mx_hrt_debug.h  mx_image.h  mx_interval_timer.h  mx_inttypes.h  mx_io.h  (+71 more)
sip/: AviexCamera.sip  AviexInterface.sip
src/: AviexBinCtrlObj.cpp  AviexCamera.cpp  AviexDetInfoCtrlObj.cpp  AviexInterface.cpp  AviexRoiCtrlObj.cpp  AviexSyncCtrlObj.cpp  Makefile
